atualizando o composer.json e chamando manualamente a home na index e criando o gitignore

--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
             "email": "fernando.a.n@hotmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "app\\": "App/"
+        }
+    }
 }
