--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
             "email": "fernando.a.n@hotmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "twig/twig": "^3.0"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "App/"
