--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,15 @@
             "email": "fernando.a.n@hotmail.com"
         }
     ],
-    "require": {
-        "twig/twig": "^3.0"
-    },
     "autoload": {
         "psr-4": {
             "App\\": "App/"
         },
         "files": [
             "./Core/Functions/functions.php",
-            "./Core/Router/router.php"
+            "./Core/Router/router.php",
+            "./Core/Controller/controller.php",
+            "./App/Config/Config.php"
         ]
     }
 }
