adicionando o blade para gerenciar as views

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
             "./Core/Controller/controller.php",
             "./App/Config/Config.php"
         ]
+    },
+    "require": {
+        "jenssegers/blade": "^1.4"
     }
 }
