--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,9 @@
 RewriteEngine On
+Options All -Indexes
+
+DirectoryIndex index.php
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php [NC,L]
 
-Options -Indexes
+RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
